# clysm

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  ROADMAP.md  SELF-HOSTING-PLAN.md  cl-wasm.asd  clysm.asd  flake.nix  package.json  run-char-tests.lisp  speckit-auto  test-char-validate.lisp  test-db.lisp  test-list-ops.lisp
.clysm-cache/: .gitignore
docs/: backquote-implementation-plan.md  blessed-subset.lisp  bootstrap-blockers.md  interpreter-bootstrap.md  reader-design.md
examples/: add.lisp  arithmetic.lisp  factorial.lisp
host-shim/: README.md  ffi-test-host.js  fs-shim.js  io-shim.js  math-shim.js  package-shim.js  run-wasm.js  runtime.js  stage1-host.js  stage1-runner.js  stage2-gen.js  verify-stage0.js  workflow-host.js
js/: bridge.js  eval.js  printer.js  reader.js
plans/: IMPLEMENTATION_PLAN.md  MILESTONE_2_PLAN.md  MILESTONE_2_WASM_INTERPRETER_PLAN.md  concurrent-whistling-pancake.md
resources/: tagbody-go-plan.md  これに加えて既存のCommon Lisp処理系を用いてブートストラップする計画を立ててください.md  一連の情報をもとに最初のマイルストーンのプランを立ててください.md  調査結果をもとに http___www.kt.rim.or.jp_~hisashim_gabrie....md
scripts/: ansi-test.sh  bootstrap-without-sbcl.sh  diff-stages.sh  gen-stage0-interp.sh  generate-stage2.sh  run-stage1-gen.sh  run-stage1.sh  run-stage2-gen.sh  run-tests-via-interpreter.sh  validate-batch.sh  verify-all.sh  verify-arithmetic.sh  verify-control-flow.sh  verify-defun.sh  verify-fixpoint-interp.sh  verify-fixpoint.sh  verify-stage0.sh  wasm-runner.js
specs/: plan.md  spec.md
test-harness/wasmtime/: Cargo.toml  ffi-host.rs
(+2589 files in other folders)
